<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Image de la ville -->
        <ImageView
            android:id="@+id/ivVille"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:elevation="4dp"
            android:scaleType="centerCrop"/>

        <!-- Nom de la ville -->
        <TextView
            android:id="@+id/tvNomVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"/>

        <!-- Description de la ville -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_background"
            android:padding="12dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="Description de la wilaya"

           />


        <!-- Section Lieux touristiques -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_lieux"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLieux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:nestedScrollingEnabled="false"/>




        <!-- Section Restaurants -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_restaurants"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRestaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="400dp"
            android:nestedScrollingEnabled="false"
            />


        <!-- Section Hôtels -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_hotels"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:nestedScrollingEnabled="false"
            />

    </LinearLayout>
</ScrollView>
