<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="@color/backgroundGray"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <!-- Image de l'hôtel -->
        <ImageView
            android:id="@+id/imageHotel"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:background="@color/secondaryColor"
            android:layout_marginEnd="8dp"/>

        <!-- Informations de l'hôtel -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/nomHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom de l'hôtel"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/etoilesHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="⭐⭐⭐⭐⭐"
                android:textSize="14sp"
                android:textColor="@color/textSecondary"/>
         </LinearLayout>

        </LinearLayout>

        <!-- Ajouter des boutons de contact -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp"
            android:layout_marginTop="4dp">

            <!-- Bouton Appeler -->



            <Button
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingHorizontal="12dp"
                android:layout_margin="5dp"
                android:onClick="callContact"
                android:text="@string/btn_call" />

            <!-- Bouton Envoyer un Email -->

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:paddingHorizontal="12dp"
                android:onClick="sendEmail"
                android:text="@string/btn_email" />

            <!-- Bouton Voir la Localisation -->
            <Button
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingHorizontal="12dp"
                android:layout_margin="5dp"
                android:text="@string/btn_location"
                android:onClick="openLocation"/>
        </LinearLayout>




    </LinearLayout>

</androidx.cardview.widget.CardView>
