<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="@color/backgroundGray"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



        <!-- Image du restaurant -->
        <ImageView
            android:id="@+id/imageRestaurant"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            android:background="@color/secondaryColor"/>

        <!-- Informations du restaurant -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/nomRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom du restaurant"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/specialiteRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Cuisine algérienne"
                android:textSize="14sp"
                android:textColor="@color/textSecondary"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="8dp"
            android:layout_marginTop="4dp">

            <!-- Bouton Appeler -->
            <Button
                android:id="@+id/btnCall"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingHorizontal="10dp"
                android:layout_margin="5dp"
                android:text="@string/btn_call"
                android:onClick="callContact"/>

            <!-- Bouton Envoyer un Email -->
            <Button
                android:id="@+id/btnEmail"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:paddingHorizontal="12dp"
                android:text="@string/btn_email"
                android:onClick="sendEmail"/>

            <!-- Bouton Voir la Localisation -->
            <Button
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:paddingHorizontal="12dp"
                android:text="@string/btn_location"
                android:onClick="openLocation"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
